[tool.poetry]
name = "puan-db"
version = "0.1.1"
description = ""
authors = ["znittzel <rikard@ourstudio.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
pldag = "^0.10.0"
redis = "^5.1.1"
uvicorn = "^0.32.0"
pydantic-settings = "^2.5.2"
pldag-solver-sdk = "^0.1.5"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
debugpy = "^1.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
