[tool.poetry]
name = "puan-db"
version = "0.1.1"
description = ""
authors = ["znittzel <rikard@ourstudio.se>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.115.3", extras = ["standard"] }
pldag = "0.10.5"
redis = "^5.1.1"
uvicorn = "^0.32.0"
pydantic-settings = "^2.5.2"
pldag-solver-sdk = "0.2.1"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
debugpy = "^1.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
